namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-tier-to-delius-update-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-tier-to-delius-update-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "hmpps-tier-to-delius-update"
    cloud-platform.justice.gov.uk/owner: "Manage a Workforce Team"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-tier-to-delius-update.git"
    cloud-platform.justice.gov.uk/slack-channel: "manage_a_workforce_dev"
    cloud-platform.justice.gov.uk/slack-alert-channel: "manage_a_workforce_dev"
